--- a/style.css
+++ b/style.css
@@ -1,3 +1,130 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: aqua;
+    background-color: #E5E5E5;
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+.header {
+    height: 92px;
+    background-color: #CF2B2B;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.header > h1 {
+    font-weight: 400;
+    font-size: 44px;
+    /* line-height: 55px; */
+    letter-spacing: -0.012em;
+    color: #FFFFFF;
+}
+
+.titulo {
+    font-family: 'Righteous';
+    font-style: normal;
+}
+
+.header > p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
+}
+
+.corpo {
+    margin: 122px 10px 122px 10px;
+}
+
+.corpo > h2 {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 32px;
+    letter-spacing: 0.018em;
+    color: #333333;
+}
+
+.container-lista-items {
+    overflow-x: scroll;
+    margin-bottom: 30px;
+}
+
+.lista-items {
+    display: inline-flex;
+    gap: 0 10px;                /*VER*/
+}
+
+.alimento-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /*gap: 8px;                   /*VER*/
+    padding: 10px;
+    background-color: white;
+    border-radius: 9px;
+    width: 172px;
+    border: 4px solid transparent;
+    cursor: pointer;
+    position: relative;
+}
+
+.alimento-box > img {
+    width: 144px;
+    height: 87px;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    object-fit: cover;
+}
+
+.box-selecionado {
+    border: 4px solid #32b72f;
+}
+
+.descricao {
+    display: flex;
+    flex-direction: column;
+}
+
+.descricao > h3 {
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.descricao > p {
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: .01em;
+    max-height: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    margin-bottom: 8px;
+    color: #A6A6A6;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    }
+
+.descricao > h4 {
+    font-weight: 500;
+}
+
+
+.descricao > img {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    bottom: 5px;
+    right: 5px;
 }
