--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body {
     margin-bottom: 30px;
 }
 
+.container-lista-items::-webkit-scrollbar {
+    display: none;
+}
+
 .lista-items {
     display: inline-flex;
     gap: 0 10px;
@@ -130,9 +134,44 @@ body {
 
 .sinalSelecionado {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 19px;
+    height: 19px;
     bottom: 5px;
     right: 5px;
 }
 
+.bottom-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 92px;
+    background-color: white;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    box-shadow: 0px 0px 10px 1px rgb(0 0 0 / 47%);
+}
+
+.bar-gray {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #CBCBCB;
+    width: 88%;
+    height: 68%;
+    border-radius: 50px;
+}
+
+.bar-gray > p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.018em;
+    color: #FFFFFF;
+}
+
+.hidden {
+    display: none;
+}
