--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
     border-radius: 9px;
     width: 92%;
-    height: 40%;
+    height: 25em;
     display: flex;
     flex-direction: column;
     align-items: center;
